--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/emergency_rescue?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/emergency_rescue?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=999999999
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
