订单注册接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #驼峰式命名
 mybatis.configuration.map-underscore-to-camel-case=true
+
+afd.user_id=7df4539e28e511eb890c52540025c377
+afd.token=BCyQ3Pa8dehcUvK4tHM7WJFqRsAgpjXr
