--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=999999999
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jackson.serialization.write-dates-as-timestamps=true
+
 #驼峰式命名
 mybatis.configuration.map-underscore-to-camel-case=true
 
